fix: fix button Shift code

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,8 @@
   font-size: 40px;
   margin: 15px auto 15px;
   color: white;
-  text-shadow: 1px 1px 2px black, 0 0 25px rgb(82, 82, 238), 0 0 5px rgb(124, 124, 212);
+  text-shadow: 1px 1px 2px black, 0 0 25px rgb(82, 82, 238),
+    0 0 5px rgb(124, 124, 212);
 }
 .wrapper__textarea {
   max-width: 800px;
@@ -115,4 +116,4 @@
 #ControlLeft,
 #ControlRight {
   width: 58px;
-}/*# sourceMappingURL=style.css.map */
+} /*# sourceMappingURL=style.css.map */
